// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageContent horizontalPosition is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--horizontalCenter"
  role="main"
/>
`;

exports[`EuiPageContent role can be removed 1`] = `
<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
/>
`;

exports[`EuiPageContent template accepts EuiPanel props 1`] = `
<div
  class="euiPanel euiPanel--borderRadiusNone euiPanel--danger euiPanel--noShadow euiPanel--noBorder euiPageContent"
  role="main"
/>
`;

exports[`EuiPageContent template accepts EuiPanel props 2`] = `
<div
  class="euiPanel euiPanel--borderRadiusMedium euiPanel--danger euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--verticalCenter euiPageContent--horizontalCenter"
  role="main"
/>
`;

exports[`EuiPageContent template accepts EuiPanel props 3`] = `
<div
  class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusNone euiPanel--danger euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--flex"
  role="main"
/>
`;

exports[`EuiPageContent template accepts EuiPanel props 4`] = `
<div
  class="euiPanel euiPanel--borderRadiusNone euiPanel--danger euiPanel--noShadow euiPanel--noBorder euiPageContent"
  role="main"
/>
`;

exports[`EuiPageContent template is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent testClass1 testClass2"
  data-test-subj="test subject string"
  role="main"
/>
`;

exports[`EuiPageContent template is rendered 2`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent testClass1 testClass2"
  data-test-subj="test subject string"
  role="main"
/>
`;

exports[`EuiPageContent template is rendered 3`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent testClass1 testClass2"
  data-test-subj="test subject string"
  role="main"
/>
`;

exports[`EuiPageContent template is rendered 4`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent testClass1 testClass2"
  data-test-subj="test subject string"
  role="main"
/>
`;

exports[`EuiPageContent verticalPosition is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--verticalCenter"
  role="main"
/>
`;
